# blbcc

./: Readme
helloworld/: CMakeLists.txt  build_bcb.bat  build_make.sh  build_ninja.sh  build_vs.bat  helloworld.cpp
helloworld/build_bcb/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
helloworld/build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  HelloWorld  build.ninja  cmake_install.cmake  rules.ninja
helloworld/build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HelloWorld.sln  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
lib/: BLASd_win32_rad.lib  BLASd_win64.lib  lapack_dll_win32_rad.lib
lib/lapacke/: libblas_rad.lib  liblapack_rad.lib  liblapacke_rad.lib
lib_lapack3.8.0/: blas.def  cblas.def  cblas.lst  lapacke.lst  libblas.exp  libcblas_rad.lib  liblapack_rad.lib  liblapacke.exp  liblapacke.lib
tool/: objconv_linux
trial/LAPACKE_BCB_examples/: CMakeLists.txt  build_bcb.bat
trial/LAPACKE_BCB_examples/build_bcb/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
trial/LAPACKE_BCB_examples/build_bcb/release/: example_DGESV_rowmajor.tds
trial/LAPACKE_BCB_examples/lib/: lapacke.lst
trial/LAPACKE_BCB_examples/lib_lapack3.8.0/: lapack.lst  libblas.lib  liblapack.lib
trial/LAPACKE_BCB_examples/src/: example_DGESV_rowmajor.cpp
trial/LAPACKE_VS_examples/: LAPACKE_VS_example.sln
trial/LAPACKE_VS_examples/Debug/: example_DGESV_rowmajor.ilk
trial/LAPACKE_VS_examples/Release/: example_DGESV_rowmajor.iobj  (+3 more)
trial/LAPACK_BCB_examples/: CMakeLists.txt  Lapack_bcb_example.cpp  build_bcb.bat
trial/LAPACK_BCB_examples/build_bcb/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
trial/LAPACK_BCB_examples/build_bcb/release/: Lapack_bcb_example.tds
trial/LAPACK_BCB_examples/lib_lapack3.8.0/: blas.lst  lapack.def  lapacke.def  liblapacke_rad.lib
(+19 files in other folders)
